--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "todolist",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Asab",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "ejs": "^3.1.3",
-    "express": "^4.17.1",
-    "lodash": "^4.17.19",
-    "mongoose": "^5.9.25",
-    "request": "^2.88.2"
-  }
+	"name": "todolist",
+	"version": "1.0.0",
+	"description": "",
+	"main": "app.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"author": "Asab",
+	"license": "ISC",
+	"engines": {
+		"node": "12.17.0"
+	},
+	"dependencies": {
+		"body-parser": "^1.19.0",
+		"ejs": "^3.1.3",
+		"express": "^4.17.1",
+		"lodash": "^4.17.19",
+		"mongoose": "^5.9.25",
+		"request": "^2.88.2"
+	}
 }
